src/sporemodder/file/arth/ArithmeticaFileGrammarParser.java
// Generated from E:\Eric\Eclipse Projects\SporeModder FX\src\sporemodder\file\arth\ArithmeticaFileGrammar.g4 by ANTLR 4.13.0
package sporemodder.file.arth;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ArithmeticaFileGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, IF=4, ELSE=5, ENDIF=6, AND=7, OR=8, DEF=9, ENDDEF=10, 
		RAND=11, POW=12, ADD=13, SUB=14, MULT=15, DIV=16, EQ=17, NEQ=18, LESS=19, 
		GREATER=20, LEQ=21, GEQ=22, IDENTIFIER=23, FLOATING_LITERAL=24, NEWLINE=25, 
		LINE_COMMENT=26, WS=27;
	public static final int
		RULE_program = 0, RULE_function = 1, RULE_statement = 2, RULE_ifFragment = 3, 
		RULE_elseFragment = 4, RULE_endifFragment = 5, RULE_conditionalExpr = 6, 
		RULE_expr = 7;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "function", "statement", "ifFragment", "elseFragment", "endifFragment", 
			"conditionalExpr", "expr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'='", "'if'", "'else'", "'endif'", "'and'", "'or'", 
			"'def'", "'enddef'", "'RAND'", "'^'", "'+'", "'-'", "'*'", "'/'", null, 
			"'!='", "'<'", "'>'", "'<='", "'>='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, "IF", "ELSE", "ENDIF", "AND", "OR", "DEF", "ENDDEF", 
			"RAND", "POW", "ADD", "SUB", "MULT", "DIV", "EQ", "NEQ", "LESS", "GREATER", 
			"LEQ", "GEQ", "IDENTIFIER", "FLOATING_LITERAL", "NEWLINE", "LINE_COMMENT", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ArithmeticaFileGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ArithmeticaFileGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(ArithmeticaFileGrammarParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ArithmeticaFileGrammarParser.NEWLINE, i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArithmeticaFileGrammarListener ) ((ArithmeticaFileGrammarListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArithmeticaFileGrammarListener ) ((ArithmeticaFileGrammarListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 41943568L) != 0)) {
				{
				{
				setState(19);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NEWLINE) {
					{
					{
					setState(16);
					match(NEWLINE);
					}
					}
					setState(21);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(24);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case DEF:
					{
					setState(22);
					function();
					}
					break;
				case IF:
				case IDENTIFIER:
					{
					setState(23);
					statement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				setState(30);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionContext extends ParserRuleContext {
		public TerminalNode DEF() { return getToken(ArithmeticaFileGrammarParser.DEF, 0); }
		public TerminalNode IDENTIFIER() { return getToken(ArithmeticaFileGrammarParser.IDENTIFIER, 0); }
		public TerminalNode ENDDEF() { return getToken(ArithmeticaFileGrammarParser.ENDDEF, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(ArithmeticaFileGrammarParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ArithmeticaFileGrammarParser.NEWLINE, i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArithmeticaFileGrammarListener ) ((ArithmeticaFileGrammarListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArithmeticaFileGrammarListener ) ((ArithmeticaFileGrammarListener)listener).exitFunction(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_function);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(31);
			match(DEF);
			setState(32);
			match(IDENTIFIER);
			setState(33);
			match(T__0);
			setState(34);
			match(T__1);
			setState(36); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(35);
				match(NEWLINE);
				}
				}
				setState(38); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEWLINE );
			setState(43);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IF || _la==IDENTIFIER) {
				{
				{
				setState(40);
				statement();
				}
				}
				setState(45);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(46);
			match(ENDDEF);
			setState(48); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(47);
					match(NEWLINE);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(50); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ConditionalStatementContext extends StatementContext {
		public IfFragmentContext ifFragment() {
			return getRuleContext(IfFragmentContext.class,0);
		}
		public EndifFragmentContext endifFragment() {
			return getRuleContext(EndifFragmentContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ElseFragmentContext elseFragment() {
			return getRuleContext(ElseFragmentContext.class,0);
		}
		public ConditionalStatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArithmeticaFileGrammarListener ) ((ArithmeticaFileGrammarListener)listener).enterConditionalStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArithmeticaFileGrammarListener ) ((ArithmeticaFileGrammarListener)listener).exitConditionalStatement(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AssignStatementContext extends StatementContext {
		public TerminalNode IDENTIFIER() { return getToken(ArithmeticaFileGrammarParser.IDENTIFIER, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ArithmeticaFileGrammarParser.EOF, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(ArithmeticaFileGrammarParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ArithmeticaFileGrammarParser.NEWLINE, i);
		}
		public AssignStatementContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArithmeticaFileGrammarListener ) ((ArithmeticaFileGrammarListener)listener).enterAssignStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArithmeticaFileGrammarListener ) ((ArithmeticaFileGrammarListener)listener).exitAssignStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		int _la;
		try {
			int _alt;
			setState(81);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IF:
				_localctx = new ConditionalStatementContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(52);
				ifFragment();
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==IF || _la==IDENTIFIER) {
					{
					{
					setState(53);
					statement();
					}
					}
					setState(58);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ELSE) {
					{
					setState(59);
					elseFragment();
					setState(63);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==IF || _la==IDENTIFIER) {
						{
						{
						setState(60);
						statement();
						}
						}
						setState(65);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(68);
				endifFragment();
				}
				break;
			case IDENTIFIER:
				_localctx = new AssignStatementContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(70);
				match(IDENTIFIER);
				setState(71);
				match(T__2);
				setState(72);
				expr(0);
				setState(79);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case NEWLINE:
					{
					setState(74); 
					_errHandler.sync(this);
					_alt = 1;
					do {
						switch (_alt) {
						case 1:
							{
							{
							setState(73);
							match(NEWLINE);
							}
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						setState(76); 
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
					} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
					}
					break;
				case EOF:
					{
					setState(78);
					match(EOF);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IfFragmentContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(ArithmeticaFileGrammarParser.IF, 0); }
		public ConditionalExprContext conditionalExpr() {
			return getRuleContext(ConditionalExprContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(ArithmeticaFileGrammarParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ArithmeticaFileGrammarParser.NEWLINE, i);
		}
		public IfFragmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifFragment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArithmeticaFileGrammarListener ) ((ArithmeticaFileGrammarListener)listener).enterIfFragment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArithmeticaFileGrammarListener ) ((ArithmeticaFileGrammarListener)listener).exitIfFragment(this);
		}
	}

	public final IfFragmentContext ifFragment() throws RecognitionException {
		IfFragmentContext _localctx = new IfFragmentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ifFragment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(IF);
			setState(84);
			match(T__0);
			setState(85);
			conditionalExpr();
			setState(86);
			match(T__1);
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(87);
				match(NEWLINE);
				}
				}
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ElseFragmentContext extends ParserRuleContext {
		public TerminalNode ELSE() { return getToken(ArithmeticaFileGrammarParser.ELSE, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(ArithmeticaFileGrammarParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ArithmeticaFileGrammarParser.NEWLINE, i);
		}
		public ElseFragmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elseFragment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArithmeticaFileGrammarListener ) ((ArithmeticaFileGrammarListener)listener).enterElseFragment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArithmeticaFileGrammarListener ) ((ArithmeticaFileGrammarListener)listener).exitElseFragment(this);
		}
	}

	public final ElseFragmentContext elseFragment() throws RecognitionException {
		ElseFragmentContext _localctx = new ElseFragmentContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_elseFragment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(ELSE);
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(94);
				match(NEWLINE);
				}
				}
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EndifFragmentContext extends ParserRuleContext {
		public TerminalNode ENDIF() { return getToken(ArithmeticaFileGrammarParser.ENDIF, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(ArithmeticaFileGrammarParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ArithmeticaFileGrammarParser.NEWLINE, i);
		}
		public EndifFragmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_endifFragment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArithmeticaFileGrammarListener ) ((ArithmeticaFileGrammarListener)listener).enterEndifFragment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArithmeticaFileGrammarListener ) ((ArithmeticaFileGrammarListener)listener).exitEndifFragment(this);
		}
	}

	public final EndifFragmentContext endifFragment() throws RecognitionException {
		EndifFragmentContext _localctx = new EndifFragmentContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_endifFragment);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(ENDIF);
			setState(104);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(101);
					match(NEWLINE);
					}
					} 
				}
				setState(106);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConditionalExprContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode AND() { return getToken(ArithmeticaFileGrammarParser.AND, 0); }
		public TerminalNode OR() { return getToken(ArithmeticaFileGrammarParser.OR, 0); }
		public ConditionalExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditionalExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArithmeticaFileGrammarListener ) ((ArithmeticaFileGrammarListener)listener).enterConditionalExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArithmeticaFileGrammarListener ) ((ArithmeticaFileGrammarListener)listener).exitConditionalExpr(this);
		}
	}

	public final ConditionalExprContext conditionalExpr() throws RecognitionException {
		ConditionalExprContext _localctx = new ConditionalExprContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_conditionalExpr);
		int _la;
		try {
			setState(112);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(107);
				expr(0);
				setState(108);
				_la = _input.LA(1);
				if ( !(_la==AND || _la==OR) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(109);
				expr(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(111);
				expr(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprContext extends ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	 
		public ExprContext() { }
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CallContext extends ExprContext {
		public TerminalNode IDENTIFIER() { return getToken(ArithmeticaFileGrammarParser.IDENTIFIER, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public CallContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArithmeticaFileGrammarListener ) ((ArithmeticaFileGrammarListener)listener).enterCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArithmeticaFileGrammarListener ) ((ArithmeticaFileGrammarListener)listener).exitCall(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ParenthesisContext extends ExprContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode ADD() { return getToken(ArithmeticaFileGrammarParser.ADD, 0); }
		public TerminalNode SUB() { return getToken(ArithmeticaFileGrammarParser.SUB, 0); }
		public ParenthesisContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArithmeticaFileGrammarListener ) ((ArithmeticaFileGrammarListener)listener).enterParenthesis(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArithmeticaFileGrammarListener ) ((ArithmeticaFileGrammarListener)listener).exitParenthesis(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ComparativeOpContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode EQ() { return getToken(ArithmeticaFileGrammarParser.EQ, 0); }
		public TerminalNode NEQ() { return getToken(ArithmeticaFileGrammarParser.NEQ, 0); }
		public TerminalNode LESS() { return getToken(ArithmeticaFileGrammarParser.LESS, 0); }
		public TerminalNode GREATER() { return getToken(ArithmeticaFileGrammarParser.GREATER, 0); }
		public TerminalNode LEQ() { return getToken(ArithmeticaFileGrammarParser.LEQ, 0); }
		public TerminalNode GEQ() { return getToken(ArithmeticaFileGrammarParser.GEQ, 0); }
		public ComparativeOpContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArithmeticaFileGrammarListener ) ((ArithmeticaFileGrammarListener)listener).enterComparativeOp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArithmeticaFileGrammarListener ) ((ArithmeticaFileGrammarListener)listener).exitComparativeOp(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class VariableContext extends ExprContext {
		public TerminalNode IDENTIFIER() { return getToken(ArithmeticaFileGrammarParser.IDENTIFIER, 0); }
		public TerminalNode ADD() { return getToken(ArithmeticaFileGrammarParser.ADD, 0); }
		public TerminalNode SUB() { return getToken(ArithmeticaFileGrammarParser.SUB, 0); }
		public VariableContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArithmeticaFileGrammarListener ) ((ArithmeticaFileGrammarListener)listener).enterVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArithmeticaFileGrammarListener ) ((ArithmeticaFileGrammarListener)listener).exitVariable(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class RandomContext extends ExprContext {
		public TerminalNode RAND() { return getToken(ArithmeticaFileGrammarParser.RAND, 0); }
		public RandomContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArithmeticaFileGrammarListener ) ((ArithmeticaFileGrammarListener)listener).enterRandom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArithmeticaFileGrammarListener ) ((ArithmeticaFileGrammarListener)listener).exitRandom(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NumberContext extends ExprContext {
		public TerminalNode FLOATING_LITERAL() { return getToken(ArithmeticaFileGrammarParser.FLOATING_LITERAL, 0); }
		public NumberContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArithmeticaFileGrammarListener ) ((ArithmeticaFileGrammarListener)listener).enterNumber(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArithmeticaFileGrammarListener ) ((ArithmeticaFileGrammarListener)listener).exitNumber(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class MultiplicativeOpContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode MULT() { return getToken(ArithmeticaFileGrammarParser.MULT, 0); }
		public TerminalNode DIV() { return getToken(ArithmeticaFileGrammarParser.DIV, 0); }
		public MultiplicativeOpContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArithmeticaFileGrammarListener ) ((ArithmeticaFileGrammarListener)listener).enterMultiplicativeOp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArithmeticaFileGrammarListener ) ((ArithmeticaFileGrammarListener)listener).exitMultiplicativeOp(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AdditiveOpContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode ADD() { return getToken(ArithmeticaFileGrammarParser.ADD, 0); }
		public TerminalNode SUB() { return getToken(ArithmeticaFileGrammarParser.SUB, 0); }
		public AdditiveOpContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArithmeticaFileGrammarListener ) ((ArithmeticaFileGrammarListener)listener).enterAdditiveOp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArithmeticaFileGrammarListener ) ((ArithmeticaFileGrammarListener)listener).exitAdditiveOp(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PowerOpContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode POW() { return getToken(ArithmeticaFileGrammarParser.POW, 0); }
		public PowerOpContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArithmeticaFileGrammarListener ) ((ArithmeticaFileGrammarListener)listener).enterPowerOp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArithmeticaFileGrammarListener ) ((ArithmeticaFileGrammarListener)listener).exitPowerOp(this);
		}
	}
